Create initial working UI for the game

--- a/index.html
+++ b/index.html
@@ -6,10 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<script src="index.js"></script>
 
 <body>
-
+    <div class="container">
+        <div class="resultArea">
+            <h1>Game: </h1>
+        </div>
+        <div class="selectionArea">
+            <button class="rock" value="rock">Rock</button>
+            <button class="paper" value="paper">Paper</button>
+            <button class="scissors" value="scissors">Scissors</button>
+        </div>
+    </div>
+    <script src="index.js"></script>
 </body>
 
 </html>
